--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kachad2",
+  "name": "thai-red-cross",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,9 +18,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "bootstrap": "^4.1.1",
+    "jquery": "^3.3.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-pagination": "^6.0.3",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
-    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -35,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "webextension-polyfill": "^0.10.0"
   }
 }
